--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -16,11 +16,11 @@
     <div th:switch="${tasks}">
         <h2 th:case="null">No tasks yet!</h2>
         <div th:case="*">
-            <h2 style="margin-top: 30px" th:text="'Tasks(' + ${#lists.size(tasks)} + ')'"></h2>
+            <h2 style="margin-top: 30px" th:text="'Tasks(' + ${#maps.size(tasks)} + ')'"></h2>
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>ProjectId</th>
+                    <th>Project</th>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Status</th>
@@ -30,18 +30,18 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="task : ${tasks}">
-                    <td th:text="${task.projectId}"></td>
-                    <td th:text="${task.taskName}"></td>
-                    <td th:text="${task.description}"></td>
+                <tr th:each="task, proj : ${tasks}" th:with="progress=${task.value}">
+                    <td th:text="${task.value.getName()}"></td>
+                    <td th:text="${task.key.taskName}"></td>
+                    <td th:text="${task.key.description}"></td>
                     <td>
-                        <span th:if="${task.taskComplete() == true}">Done</span>
-                        <span th:unless="${task.taskComplete() == true}">Pending</span>
+                        <span th:if="${task.key.taskComplete() == true}">Done</span>
+                        <span th:unless="${task.key.taskComplete() == true}">Pending</span>
                     </td>
 <!--                    <td th:text="${task.taskComplete()} ? 'Done' : 'Pending'"><td>-->
-                    <td><a th:href="@{/task/detail/{id}(id=${task.getId()})}"><i class="bi-info-circle" style="font-size: 1rem; color: cornflowerblue;"></i></a></td>
-                    <td><a th:href="@{/task/edit/{id}(id=${task.getId()})}"><i class="bi-pencil" style="font-size: 1rem; color: forestgreen;"></i></a></td>
-                    <td><a th:href="@{/task/delete/{id}(id=${task.getId()})}"><i class="bi-x-circle-fill" style="font-size: 1rem; color: darkred;"></i></a></td>
+                    <td><a th:href="@{/task/detail/{id}(id=${task.key.getId()})}"><i class="bi-info-circle" style="font-size: 1rem; color: cornflowerblue;"></i></a></td>
+                    <td><a th:href="@{/task/edit/{id}(id=${task.key.getId()})}"><i class="bi-pencil" style="font-size: 1rem; color: forestgreen;"></i></a></td>
+                    <td><a th:href="@{/task/delete/{id}(id=${task.key.getId()})}"><i class="bi-x-circle-fill" style="font-size: 1rem; color: darkred;"></i></a></td>
                 </tr>
                 </tbody>
             </table>
