--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,7 +13,7 @@
         <div class="row" style="margin: 30px">
             <div class="col">Hi there!</div>
             <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Projekt</a></div>
-            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-success"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Zakaznika</a></div>
+            <div class="col"><a th:href="@{'/project/client'}" class="btn btn-success"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Klienta</a></div>
             <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-warning"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Vytvorit skupinu</a></div>
 
         </div>
