Changed project detail Some other fixes

--- a/src/main/resources/templates/address/edit.html
+++ b/src/main/resources/templates/address/edit.html
@@ -27,7 +27,11 @@
         <div class="form-group">
             <input type="hidden" readonly class="form-control" th:value="*{ownerId}" name="ownerId">
         </div>
-        <button type="submit" class="btn btn-primary">Edit address</button>
+        <div>
+            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Ulozit</button>
+            <a href="/client/all" class="btn btn-success">Zpet</a>
+        </div>
+
     </form>
 </div>
 </body>
