--- a/src/main/resources/templates/invoice/all.html
+++ b/src/main/resources/templates/invoice/all.html
@@ -25,7 +25,7 @@
                     <th>Company name</th>
                     <th>Due by</th>
                     <th>Created</th>
-                    <th>$$</th>
+                    <th>Amount</th>
                     <th>PDF</th>
                     <th>Edit</th>
                     <th>Delete</th>
