--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -15,22 +15,26 @@
         <div class="form-group">
             <label >Name:</label>
             <input type="text" th:field="*{name}" class="form-control" placeholder="Name" >
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label >Description:</label>
             <input type="text" th:field="*{description}" class="form-control" placeholder="Description" >
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label >Start date:</label>
             <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="Start" >
+            <p th:if="${#fields.hasErrors('projectStart')}" th:errors="*{projectStart}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label >End date:</label>
             <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="End" >
         </div>
         <div class="form-group">
-            <label >Estimated hours:</label>
+            <label >Estimated budget:</label>
             <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="EstimatedHours" >
+            <p th:if="${#fields.hasErrors('estimatedHours')}" th:errors="*{estimatedHours}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label >Hour rate:</label>
@@ -38,6 +42,7 @@
         </div>
         <input type="hidden" readonly class="form-control" th:value="*{ownerId}" placeholder="id" name="ownerId">
         <button type="submit" class="btn btn-primary">Zalozit projekt</button>
+        <a href="/project/all" class="btn btn-danger">Zrušit</a>
     </form>
 </div>
 </body>
