--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -18,23 +18,27 @@
         <div class="form-group">
             <label>Name:</label>
             <input type="text" th:field="*{name}" class="form-control" placeholder="Name">
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
 
         <div class="form-group">
             <label>Description:</label>
             <input type="text" th:field="*{description}" class="form-control" placeholder="Description">
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label>Start date:</label>
             <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="Start date">
+            <p th:if="${#fields.hasErrors('projectStart')}" th:errors="*{projectStart}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label>End date:</label>
             <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="End date" >
         </div>
         <div class="form-group">
-            <label>Estimated hours:</label>
+            <label>Estimated budget:</label>
             <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="Estimated hours" >
+            <p th:if="${#fields.hasErrors('estimatedHours')}" th:errors="*{estimatedHours}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
         <div class="form-group">
             <label>Hour rate:</label>
@@ -47,7 +51,7 @@
 <!--        </div>-->
         <div>
             <button type="submit" class="btn btn-primary" style="margin-right: 5px">Ulozit</button>
-            <a href="/project/all" class="btn btn-success">Zpet</a>
+            <a href="/project/all" class="btn btn-danger">Zrušit</a>
         </div>
     </form>
 
