--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -15,6 +15,7 @@
         <div class="form-group">
             <label>Name:</label>
             <input type="text" th:field="*{taskName}" class="form-control" placeholder="Name">
+            <p th:if="${#fields.hasErrors('taskName')}" th:errors="*{taskName}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label>Description:</label>
@@ -23,6 +24,7 @@
         <div class="form-group">
             <label>Start date:</label>
             <input type="datetime-local" th:field="*{startDate}" class="form-control" placeholder="date of start">
+            <p th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label>End date:</label>
@@ -36,6 +38,7 @@
         <input type="hidden" readonly class="form-control" th:field="*{projectId}">
         </div>
         <button type="submit" class="btn btn-primary">Vytvorit ulohu</button>
+        <a href="/task/all" class="btn btn-success">Zpet</a>
     </form>
 </div>
 </body>
