--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -15,6 +15,7 @@
         <div class="form-group">
             <label>Name:</label>
             <input type="text" th:field="*{taskName}" class="form-control">
+            <p th:if="${#fields.hasErrors('taskName')}" th:errors="*{taskName}" class="alert alert-danger" role="alert"></p>
         </div>
 
         <div class="form-group">
@@ -24,6 +25,7 @@
         <div class="form-group">
             <label>Start date:</label>
             <input type="datetime-local" th:field="*{startDate}" class="form-control" placeholder="date of start">
+            <p th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label>End date:</label>
