--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -36,7 +36,7 @@
         <input type="hidden" th:field="*{projectId}" class="form-control" >
 
         <div>
-            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Edit</button>
+            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Ulozit</button>
             <a href="/task/all" class="btn btn-success">Zpet</a>
         </div>
     </form>
