--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -18,13 +18,13 @@
 
         </div>
 
-        <div th:switch="${projects}">
-            <h2 th:case="null">No projects yet!</h2>
+        <div th:switch="${#lists.size(projects)}">
+            <h2 th:case="0">No projects yet!</h2>
             <div th:case="*">
                 <div class="row mb-2">
                     <div class="col-md-6" th:each="project, stats : ${projectsProgress}" th:with="progress=${project.value}">
                         <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                            <div class="col p-4 d-flex flex-column position-static">
+                            <div class="col p-4 d-flex flex-column position-static text-nowrap">
                                 <strong class="d-inline-block mb-2 text-primary" th:text="'~' + ${project.key.estimatedHours} + ' hours'"></strong>
                                 <a th:href="@{/project/detail/{id}(id=${project.key.getId()})}"><h3 class="mb-0" th:text="${project.key.name}"></h3></a>
                                 <div class="mb-1 text-muted" th:text="${project.key.projectStart.toLocalDate()}"></div>
