--- a/src/main/resources/templates/task/detail.html
+++ b/src/main/resources/templates/task/detail.html
@@ -26,7 +26,7 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Task Start</label>
             <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${task.startDate}">
+                <input type="text" readonly class="form-control-plaintext" th:value="${task.startDate.toLocalDate()}">
             </div>
         </div>
         <div class="form-group row">
