Some other fixes

--- a/src/main/resources/templates/client/add.html
+++ b/src/main/resources/templates/client/add.html
@@ -9,7 +9,7 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    <h2 style="margin-top: 30px">Clients</h2>
+    <h2 style="margin-top: 30px">New Client</h2>
     <form th:action="@{/client/add}" th:object="${client}" method="post">
 
         <div class="form-group">
