--- a/src/main/resources/templates/layout_dash.html
+++ b/src/main/resources/templates/layout_dash.html
@@ -39,7 +39,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
-    <link th:src="@{/static/css/dashboard/dashboard.css}" rel="stylesheet" type="text/css"/>
+    <link th:src="@{/static/css/dashboard/dashboard.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div th:include="header_dash"></div>
