--- a/src/main/resources/templates/project/all.html
+++ b/src/main/resources/templates/project/all.html
@@ -14,7 +14,10 @@
         <i class="fas fa-check-circle" style="color:green"></i><strong th:text="${msg}"></strong>
     </div>
     <div th:switch="${#lists.size(projects)}">
-        <h2 th:case="0">No projects yet!</h2>
+        <div th:case="0">
+            <h2 style="margin-top: 30px">No projects yet!</h2>
+            <h3>You may want add one <a th:href="@{'/project/ad'}"><i class="bi-plus-circle" style="font-size: 3rem; color: forestgreen;"></i></a></h3>
+        </div>
         <div th:case="*">
             <h2 style="margin-top: 30px">Projects</h2><p><a th:href="@{'/project/ad'}" class="btn btn-outline-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Add a new project</a></p>
             <table class="table table-striped">
