--- a/src/main/resources/templates/client/all.html
+++ b/src/main/resources/templates/client/all.html
@@ -14,9 +14,12 @@
         <i class="fas fa-check-circle" style="color:green"></i><strong th:text="${msg}"></strong>
     </div>
     <div th:switch="${#lists.size(clients)}">
-        <h2 style="margin-top: 30px">Clients</h2><p><a th:href="@{'/client/ad'}" class="btn btn-outline-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Add a new client</a></p>
-        <h2 th:case="0" style="margin-top: 30px">No clients yet!</h2>
+        <div th:case="0">
+            <h2 style="margin-top: 30px">No clients yet!</h2>
+            <h3>You may want add one <a th:href="@{'/client/ad'}"><i class="bi-plus-circle" style="font-size: 3rem; color: forestgreen;"></i></a></h3>
+        </div>
         <div th:case="*">
+            <h2 style="margin-top: 30px">Clients</h2><p><a th:href="@{'/client/ad'}" class="btn btn-outline-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Add a new client</a></p>
             <table class="table table-striped">
                 <thead>
                 <tr>
