--- a/src/main/resources/templates/invoice/all.html
+++ b/src/main/resources/templates/invoice/all.html
@@ -14,7 +14,10 @@
         <i class="fas fa-check-circle" style="color:green"></i><strong th:text="${msg}"></strong>
     </div>
     <div th:switch="${#lists.size(invoices)}">
-        <h2 th:case="0" style="margin-top: 30px">No invoices yet!</h2>
+        <div th:case="0">
+            <h2 style="margin-top: 30px">No invoices yet!</h2>
+            <h3>You have to create project before <a th:href="@{'/project/ad'}"><i class="bi-plus-circle" style="font-size: 3rem; color: forestgreen;"></i></a></h3>
+        </div>
         <div th:case="*">
             <h2 style="margin-top: 30px">Invoices</h2>
             <table class="table table-striped">
