--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -14,7 +14,10 @@
         <i class="fas fa-check-circle" style="color:green"></i><strong th:text="${msg}"></strong>
     </div>
     <div th:switch="${#lists.size(tasks)}">
-        <h2 th:case="0">No tasks yet!</h2>
+        <div th:case="0">
+            <h2>No tasks yet!</h2>
+            <h3>You have to create project before <a th:href="@{'/project/ad'}"><i class="bi-plus-circle" style="font-size: 3rem; color: forestgreen;"></i></a></h3>
+        </div>
         <div th:case="*">
             <h2 style="margin-top: 30px" th:text="'Tasks(' + ${#maps.size(tasks)} + ')'"></h2>
             <table class="table table-striped">
