--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -9,7 +9,7 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    <h2><span th:text="${user.getNiceNameAndLastname()}"></span> Details</h2>
+    <h2 style="margin-top: 30px"><span th:text="${user.getNiceNameAndLastname()}"></span> Details</h2>
     <form th:action="@{/user/update/{id}(id=${user.getId()})}" th:object="${user}" method="post">
 
         <div class="form-group">
