--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -31,12 +31,12 @@
             <label >End date:</label>
             <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="End" >
         </div>
-        <div class="form-group">
+        <div class="form-group" >
             <label >Estimated budget:</label>
             <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="EstimatedHours" >
             <p th:if="${#fields.hasErrors('estimatedHours')}" th:errors="*{estimatedHours}" class="alert alert-danger" role="alert">postCode was not set</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" th:if="${user.getRole() == 'PREMIUM'}" >
             <label >Hour rate:</label>
             <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
         </div>
