--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -47,7 +47,7 @@
                 <input type="text" readonly class="form-control-plaintext" th:value="${project.estimatedHours}">
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" th:if="${user.getRole() == 'PREMIUM'}" >
             <label class="col-sm-2 col-form-label">Hour Rate</label>
             <div class="col-sm-10">
                 <input type="text" readonly class="form-control-plaintext" th:value="${project.hourRate}">
@@ -59,7 +59,7 @@
         <a th:href="@{/project/delete/{id}(id=${project.getId()})}" class="btn btn-outline-danger">Smazat projekt</a>
         <a th:href="@{/project/completed/{id}(id=${project.getId()})}" class="btn btn-outline-dark">Complete project</a><br /><br />
         <a th:href="@{/task/ad/{id}(id=${project.getId()})}" class="btn btn-outline-dark"><i class="bi-plus-circle" style="font-size: 1rem; color: forestgreen;"></i> Pridat Task</a>
-        <a th:href="@{/invoice/ad/{id}(id=${project.getId()})}" class="btn btn-outline-dark"><i class="bi-receipt" style="font-size: 1rem; color: purple;"></i> Vytvorit fakturu</a>
+        <a th:if="${user.getRole() == 'PREMIUM'}"  th:href="@{/invoice/ad/{id}(id=${project.getId()})}" class="btn btn-outline-dark"><i class="bi-receipt" style="font-size: 1rem; color: purple;"></i> Vytvorit fakturu</a>
         <a href="/project/all" class="btn btn-success">Zpet</a>
     </div>
     <div th:switch="${#lists.size(tasks)}">
@@ -107,7 +107,7 @@
             </table>
         </div>
     </div>
-    <div th:switch="${#lists.size(invoices)}">
+    <div th:if="${user.getRole() == 'PREMIUM'}"  th:switch="${#lists.size(invoices)}">
         <div th:case="0">
             <h2 style="margin-top: 30px">No invoices yet!</h2>
             <span>You may want add one <a th:href="@{/invoice/ad/{id}(id=${project.getId()})}"><i class="bi-receipt" style="font-size: 1rem; color: purple;"></i></a></span>
