--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -13,7 +13,7 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <i class="fas fa-check-circle" style="color:green"></i><strong th:text="${msg}"></strong>
     </div>
-    <div th:switch="${#lists.size(tasks)}">
+    <div th:switch="${#maps.size(tasks)}">
         <div th:case="0">
             <h2>No tasks yet!</h2>
             <h3>You have to create project before <a th:href="@{'/project/ad'}"><i class="bi-plus-circle" style="font-size: 3rem; color: forestgreen;"></i></a></h3>
