--- a/src/main/resources/templates/task/detail.html
+++ b/src/main/resources/templates/task/detail.html
@@ -35,7 +35,7 @@
                 <input type="text" readonly class="form-control-plaintext" th:value="${task.endDate}">
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" th:if="${user.getRole() == 'PREMIUM'}" >
             <label class="col-sm-2 col-form-label">Hour Rate</label>
             <div class="col-sm-10">
                 <input type="text" readonly class="form-control-plaintext" th:value="${task.hourRate}">
