--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -22,7 +22,7 @@
             <input type="text" th:field="*{lastName}" class="form-control" placeholder="Last name" >
             <p th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="alert alert-danger" role="alert"></p>
         </div>
-        <div class="form-group">
+        <div class="form-group" th:if="${user.getRole() == 'PREMIUM'}" >
             <label >Bank account number:</label>
             <input type="text" th:field="*{bankAccount}" class="form-control" placeholder="Bank account" >
         </div>
