--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
          th:fragment="header"
          xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="#">Carousel</a>
+                <a class="navbar-brand" href="#">Reported System</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -12,16 +12,19 @@
                                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link" href="#">Link</a>
+                                        <a class="nav-link" href="#">Who we are?</a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Purchase Premium</a>
                                 </li>
                                 <li sec:authorize="isAuthenticated()" class="nav-item">
                                         <a class="nav-link" href="#">authorized</a>
                                 </li>
                                 <li sec:authorize="isAnonymous()" class="nav-item">
                                         <a class="nav-link" href="#">anonym</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="#">FAQ</a>
                                 </li>
                         </ul>
                         <div>
