--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,7 +25,7 @@
                                 </li>
                         </ul>
                         <div>
-                                <span th:if="${user != null}">
+                                <span th:if="${(user != null) && (user.getId() != null)}">
                                         <a th:href="@{/dashboard}" class="btn btn-outline-primary my-2 my-sm-0">Dashboard</a>
                                         <a th:href="@{/logout}" class="btn btn-outline-warning my-2 my-sm-0">Log Out</a>
                                 </span>
